<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_general"
        android:icon="@drawable/home"
        android:title="@string/title_home_nav" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/calendar"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/newsfeed"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_leader_options"
        android:icon="@drawable/leadericon"
        android:title="@string/leader_opportunities"/>

    <item
        android:id="@+id/navigation_edit_profile"
        android:icon="@drawable/profileicon"
        android:title="@string/profile" />



</menu>
